feat: add RAM and java arg recommendations